tests/comp/sem/valid/array_sub.mj
class A {

	public int lol;

	public void test() {
		int[] foo;
		foo[0];
		A[][] bar;
		bar[0][0].lol;
	}

	public static void main(String[] args) {
	}

}
