tests/comp/sem/invalid/shadow_param.mj
class A {

	public void test(/*** int foo ***/) {
		{
			int foo;
		}
	}

	public static void main(String[] args) {
	}

}
